[package]
name = "protocol-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"
name = "protocol_integration_tests"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
invoice = { package = "comebackhere-invoice", path = "../contracts/invoice" }
treasury = { package = "comebackhere-treasury", path = "../contracts/treasury" }
compliance = { package = "comebackhere-compliance", path = "../contracts/compliance" }
